# unified-data

./: .gitignore  README.md  UPDATES.md  data_source.md  error_log.md  pyproject.toml  reproduce_issue.py  requirements.txt  test_overview.md  utils.py  verify_external.sh  verify_release.sh
src/: api.py
src/adapters/: akshare_adapter.py  base.py  ccxt_adapter.py  yfinance_adapter.py
src/models/: enums.py
src/unified_data/: __init__.py  api.py  utils.py
src/unified_data/adapters/: akshare_adapter.py  base.py  ccxt_adapter.py  yfinance_adapter.py
src/unified_data/adapters/ccxt_strategies/: base.py  binance.py  coinbase.py
src/unified_data/models/: enums.py  types.py
tests/: test_adapters_error_handling.py  test_adapters_live.py  test_akshare_market_detection.py  test_api_response.py  test_basic.py  test_ccxt_strategies.py  test_e2e.py  test_kline_exchange_column.py  test_limit_advanced.py  test_limit_logic.py  test_limits.py  test_mocked.py  test_standard_symbol.py  test_timeframes.py  test_top_level_imports.py  test_verify_install.py  test_ws_smoke.py  test_yfinance_concurrency.py
