[project]
name = "unified-data"
version = "0.3.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.4",
    "ccxt>=4.5.30",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "yfinance>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
